--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,9 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        buildConfigField "String", "BASE_URL", "\"https://api.foursquare.com/v2/\""
+        buildConfigField "String", "CLIENT_ID", "\"RENRZB3JQWKDYIIGFCGMVSIILNFSEVMHKANHBEQMKMUBEGP2\""
+        buildConfigField "String", "SECRET_ID", "\"5MKRUEZH43FAWLUDC4VFZ32O0WWH2PBYEAASRPD2P00B3FMP\""
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -75,7 +77,11 @@ dependencies {
     //android lifecycle extension
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.lifecycleKTX"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$rootProject.lifecycleKTX"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$rootProject.lifecycleKTX"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$rootProject.lifecycleKTX"
+    implementation "androidx.fragment:fragment-ktx:1.3.3"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$rootProject.lifecycleKTX"
+
+    implementation "com.androidisland.ezpermission:ezpermission:$rootProject.ezpermission"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
