--- a/build.gradle
+++ b/build.gradle
@@ -37,10 +37,12 @@ ext {
     loggingInterceptor = '3.5.0'
     moshi = '1.9.3'
 
-    koin = '1.9.3'
+    koin = '2.0.1'
 
     lifecycle = "2.3.1"
     room = "2.3.0"
     lifecycleKTX = "2.3.1"
     coroutine = "1.4.3"
+
+    ezpermission = "0.1.4"
 }
